fix worklog always visible problem

--- a/app/assets/stylesheets/timer.scss
+++ b/app/assets/stylesheets/timer.scss
@@ -1,6 +1,6 @@
 /* refactor later */
 .none {
-  display: none; }
+  display: none !important; }
 
 #timer-bar {
   height: 30px;
